--- a/train.ipynb
+++ b/train.ipynb
@@ -40,374 +40,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# download & extract frames\n",
-    "!pip install torrentp nest_asyncio\n",
+    "# !pip install torrentp nest_asyncio\n",
+    "# !huggingface-cli download OpenGVLab/InternViT-300M-448px-V2_5\n",
+    "# !huggingface-cli download IDEA-Research/grounding-dino-tiny\n",
     "\n",
-    "import os, shutil, random, string, asyncio\n",
-    "from torrentp import TorrentDownloader\n",
-    "import nest_asyncio\n",
-    "nest_asyncio.apply()\n",
-    "\n",
-    "os.makedirs('data', exist_ok=True)\n",
-    "vids_folder = \"./data/vids\"\n",
-    "\n",
-    "def randStr(length=8):\n",
-    "    return ''.join(random.choices(string.ascii_letters + string.digits, k=length))\n",
-    "\n",
-    "\n",
-    "async def download(save_path, magnet_uri):\n",
-    "    torrent_file = TorrentDownloader(magnet_uri, save_path=save_path)\n",
-    "    await torrent_file.start_download()\n",
-    "\n",
-    "\n",
-    "def extract_video(source_folder, target_folder, name):\n",
-    "    video_extensions = (\".mp4\", \".avi\", \".mkv\", \".mov\", \".flv\", \".wmv\")\n",
-    "    os.makedirs(target_folder, exist_ok=True)\n",
-    "\n",
-    "    for root, _, files in os.walk(source_folder):\n",
-    "        for filename in files:\n",
-    "            if filename.lower().endswith(video_extensions):\n",
-    "                source_path = os.path.join(root, filename)\n",
-    "                _, ext = os.path.splitext(filename)\n",
-    "                destination_path = os.path.join(target_folder, name+ext)\n",
-    "                shutil.move(source_path, destination_path)\n",
-    "                return ext # Stop after moving the first found video file\n",
-    "\n",
-    "\n",
-    "async def extract_frames(name, vid_path):\n",
-    "    mkdir_cmd = [\"mkdir\", \"-p\", f\"./data/raw_frames/{name}\"]\n",
-    "    proc_mkdir = await asyncio.create_subprocess_exec(*mkdir_cmd)\n",
-    "    await proc_mkdir.wait()\n",
-    "\n",
-    "    ffmpeg_cmd = [\n",
-    "        \"ffmpeg\",\n",
-    "        \"-hwaccel\", \"cuda\",\n",
-    "        \"-c:v\", \"h264_cuvid\",\n",
-    "        \"-i\", vid_path,\n",
-    "        \"-vf\", \"select='not(mod(n,50))'\",\n",
-    "        \"-q:v\", \"2\",\n",
-    "        \"-vsync\", \"0\",\n",
-    "        \"-threads\", \"0\",\n",
-    "        f\"./data/raw_frames/{name}/frame_%04d.jpg\"\n",
-    "    ]\n",
-    "    proc_ffmpeg = await asyncio.create_subprocess_exec(*ffmpeg_cmd)\n",
-    "    await proc_ffmpeg.wait()\n",
-    "\n",
-    "\n",
-    "name = randStr()\n",
-    "\n",
-    "async def main():\n",
-    "    save_path=f'./data/{name}'\n",
-    "    magnet_uri = \"magnet:?xt=urn:btih:D7A46713EAEE18C746B3254B7D1492A50FD9D6CE&dn=The+Matrix+%281999%29+1080p+BrRip+x264+-+1.85GB+-+YIFY&tr=http%3A%2F%2Fp4p.arenabg.com%3A1337%2Fannounce&tr=udp%3A%2F%2F47.ip-51-68-199.eu%3A6969%2Fannounce&tr=udp%3A%2F%2F9.rarbg.me%3A2780%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2710%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2730%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2920%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.cyberia.is%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.dler.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=udp%3A%2F%2Ftracker.pirateparty.gr%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.tiny-vps.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce\"\n",
-    "    await download(save_path, magnet_uri)\n",
-    "    ext = extract_video(save_path, vids_folder, name)\n",
-    "    vid_path = f\"./data/vids/{name + ext}\"\n",
-    "    await extract_frames(name, vid_path)\n",
-    "    shutil.rmtree(save_path, ignore_errors=True)\n",
-    "    os.remove(vid_path)\n",
-    "\n",
-    "await main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cluster by character\n",
-    "import os, glob, cv2, insightface, random\n",
-    "import numpy as np\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sklearn.metrics.pairwise import euclidean_distances\n",
-    "from math import ceil\n",
-    "from sklearn.cluster import DBSCAN, KMeans\n",
-    "\n",
-    "# ----------------------------------------\n",
-    "# 1) Face detection & embedding setup\n",
-    "# ----------------------------------------\n",
-    "face_analysis = insightface.app.FaceAnalysis()\n",
-    "face_analysis.prepare(ctx_id=0, det_size=(640,640), det_thresh=0.76)\n",
-    "\n",
-    "def get_face(image_path):\n",
-    "    \"\"\"\n",
-    "    Returns metadata for the best face in the image, or None if no face.\n",
-    "    Best face is the one with the lowest sum of pairwise cos sims among all faces in the frame (the most unique).\n",
-    "    \"\"\"\n",
-    "    img = cv2.imread(image_path)\n",
-    "    if img is None:\n",
-    "        return None\n",
-    "    \n",
-    "    faces = face_analysis.get(img)\n",
-    "    if len(faces) == 0:\n",
-    "        return None\n",
-    "\n",
-    "    if len(faces) == 1:\n",
-    "        return extract_metadata(faces[0], image_path)\n",
-    "\n",
-    "    embeddings = []\n",
-    "    for f in faces:\n",
-    "        # face.normed_embedding is a 512-D vector\n",
-    "        emb = f.normed_embedding.reshape(1, -1)  # shape (1, 512)\n",
-    "        embeddings.append(emb)\n",
-    "    embeddings = np.vstack(embeddings)  # shape (num_faces, 512)\n",
-    "    sums = cosine_similarity(embeddings).sum(axis=1)\n",
-    "    idx_min = np.argmin(sums)\n",
-    "    return extract_metadata(faces[idx_min], image_path)\n",
-    "\n",
-    "def extract_metadata(face_obj, image_path):\n",
-    "    return {\n",
-    "        \"image_path\": image_path,\n",
-    "        \"face_bbox\": [face_obj.bbox.astype(int)],\n",
-    "        \"face_embedding\": face_obj.normed_embedding.tolist(), # shape (512,)\n",
-    "    }\n",
-    "\n",
-    "# ----------------------------------------\n",
-    "# 2) Collect metadata from frames\n",
-    "# ----------------------------------------\n",
-    "def get_frames(frames_folder):\n",
-    "    metadata = []\n",
-    "    frame_paths = sorted(glob.glob(os.path.join(frames_folder, \"*.jpg\")))\n",
-    "    for path in frame_paths:\n",
-    "        face_data = get_face(path)\n",
-    "        if face_data is None:\n",
-    "            os.remove(path)\n",
-    "        else:\n",
-    "            metadata.append(face_data)\n",
-    "    return metadata\n",
-    "\n",
-    "# ----------------------------------------\n",
-    "# 3) Clustering by character\n",
-    "# ----------------------------------------\n",
-    "def cluster(\n",
-    "    face_metadata,\n",
-    "    eps=0.8,\n",
-    "    min_samples=10,\n",
-    "    max_cluster_size=10000,\n",
-    "    merge_centroid_dist=0.3\n",
-    "):\n",
-    "    \"\"\"\n",
-    "    1) DBSCAN to form initial clusters.\n",
-    "    2) Merge clusters whose centroids are within 'merge_centroid_dist'.\n",
-    "    3) Split large clusters using K-means if > max_cluster_size.\n",
-    "    \n",
-    "    face_metadata: list of dict, each with 'face_embedding': list[float], 'image_path', ...\n",
-    "    eps: DBSCAN eps (bigger => merges more frames into same cluster).\n",
-    "    min_samples: DBSCAN min_samples (small => easier to form a cluster).\n",
-    "    max_cluster_size: after clustering, if a cluster has > max_cluster_size frames, we split it.\n",
-    "    merge_centroid_dist: if centroids of two clusters are closer than this, merge them.\n",
-    "    \"\"\"\n",
-    "    embeddings = np.array([item[\"face_embedding\"] for item in face_metadata])\n",
-    "\n",
-    "    # Step 1: DBSCAN\n",
-    "    db = DBSCAN(eps=eps, min_samples=min_samples, metric='euclidean', n_jobs=-1)\n",
-    "    labels = db.fit_predict(embeddings)\n",
-    "\n",
-    "    # Collect cluster members\n",
-    "    clusters_dict = {}\n",
-    "    for idx, label in enumerate(labels):\n",
-    "        if label == -1:\n",
-    "            continue  # noise\n",
-    "        clusters_dict.setdefault(label, []).append(idx)\n",
-    "\n",
-    "    # Convert to a list of clusters\n",
-    "    clusters = list(clusters_dict.values())\n",
-    "\n",
-    "    if not clusters:\n",
-    "        return []\n",
-    "\n",
-    "    # Step 2: Merge cluster centroids if they are too close\n",
-    "    #   - Compute centroid of each cluster\n",
-    "    centroids = []\n",
-    "    for c in clusters:\n",
-    "        emb_c = embeddings[c]\n",
-    "        centroid = emb_c.mean(axis=0)\n",
-    "        centroids.append(centroid)\n",
-    "    centroids = np.array(centroids)  # shape (num_clusters, emb_dim)\n",
-    "\n",
-    "    #   - Compute distance matrix between centroids\n",
-    "    dist_mat = euclidean_distances(centroids, centroids)\n",
-    "    #   - Merge clusters if distance < merge_centroid_dist\n",
-    "    #     We'll do a simple union-find or BFS approach\n",
-    "    visited = [False]*len(clusters)\n",
-    "    merged_clusters = []\n",
-    "\n",
-    "    def dfs(idx, group):\n",
-    "        stack = [idx]\n",
-    "        while stack:\n",
-    "            node = stack.pop()\n",
-    "            if visited[node]:\n",
-    "                continue\n",
-    "            visited[node] = True\n",
-    "            group.append(node)\n",
-    "            # check neighbors\n",
-    "            for nbr in range(len(clusters)):\n",
-    "                if not visited[nbr] and dist_mat[node, nbr] < merge_centroid_dist:\n",
-    "                    stack.append(nbr)\n",
-    "\n",
-    "    for i in range(len(clusters)):\n",
-    "        if not visited[i]:\n",
-    "            group = []\n",
-    "            dfs(i, group)\n",
-    "            merged_clusters.append(group)\n",
-    "\n",
-    "    # merged_clusters is now a list of lists of cluster indices to merge\n",
-    "    final_merged = []\n",
-    "    for group in merged_clusters:\n",
-    "        # union of all frames from those clusters\n",
-    "        merged_frames = []\n",
-    "        for ci in group:\n",
-    "            merged_frames.extend(clusters[ci])\n",
-    "        final_merged.append(merged_frames)\n",
-    "\n",
-    "    # Step 3: For each merged cluster, if it's > max_cluster_size, split via K-means\n",
-    "    final_clusters = []\n",
-    "    for frames in final_merged:\n",
-    "        if len(frames) <= max_cluster_size:\n",
-    "            final_clusters.append(frames)\n",
-    "        else:\n",
-    "            # sub-cluster with K-means\n",
-    "            n_sub = ceil(len(frames)/max_cluster_size)\n",
-    "            sub_embeddings = embeddings[frames]\n",
-    "            km = KMeans(n_clusters=n_sub, random_state=42, n_init=10)\n",
-    "            sub_labels = km.fit_predict(sub_embeddings)\n",
-    "\n",
-    "            for sub_label in range(n_sub):\n",
-    "                sub_indices = [frames[i] for i, sl in enumerate(sub_labels) if sl == sub_label]\n",
-    "                # optional: discard if < min_samples\n",
-    "                if len(sub_indices) >= min_samples:\n",
-    "                    final_clusters.append(sub_indices)\n",
-    "                # else: either discard or merge with nearest sub-cluster (not shown)\n",
-    "\n",
-    "    return final_clusters\n",
-    "\n",
-    "\n",
-    "frames_folder = f\"./data/raw_frames/{name}\"\n",
-    "metadata = get_frames(frames_folder)\n",
-    "print(f\"Collected {len(metadata)} face entries.\")\n",
-    "raw_clusters = cluster(metadata)\n",
-    "min_size, max_size = 13, 36\n",
-    "filtered_clusters = [cluster for cluster in raw_clusters if len(cluster) >= min_size]\n",
-    "clusters = [random.sample(cluster, min(len(cluster), max_size)) for cluster in filtered_clusters]\n",
-    "for i, c in enumerate(clusters):\n",
-    "    print(f\"Cluster {i} has {len(c)} items.\")\n",
-    "# Image.open(metadata[clusters[8][0]]['image_path'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# adding body bb and embed\n",
-    "import torch\n",
-    "from PIL import Image\n",
-    "from tqdm import tqdm\n",
-    "from transformers import AutoProcessor, AutoModelForZeroShotObjectDetection, AutoModel, AutoFeatureExtractor\n",
-    "\n",
-    "device = \"cuda\"\n",
-    "\n",
-    "gino_model_id = \"IDEA-Research/grounding-dino-tiny\"\n",
-    "processor = AutoProcessor.from_pretrained(gino_model_id)\n",
-    "g_model = AutoModelForZeroShotObjectDetection.from_pretrained(gino_model_id).to(device)\n",
-    "\n",
-    "vision_model_id = \"OpenGVLab/InternViT-300M-448px-V2_5\"\n",
-    "vision_model = AutoModel.from_pretrained(\n",
-    "    vision_model_id, torch_dtype=torch.bfloat16, trust_remote_code=True\n",
-    ").to(device)\n",
-    "vision_extractor = AutoFeatureExtractor.from_pretrained(vision_model_id, trust_remote_code=True)\n",
-    "\n",
-    "def compute_body_embedding(pil_image):\n",
-    "    inputs = vision_extractor(images=pil_image, return_tensors=\"pt\")\n",
-    "    inputs = {k: v.to(torch.bfloat16).to(device) for k, v in inputs.items()}\n",
-    "    with torch.no_grad():\n",
-    "        outputs = vision_model(**inputs)\n",
-    "    if hasattr(outputs, \"pooler_output\"):\n",
-    "        emb = outputs.pooler_output.squeeze(0)\n",
-    "    else:\n",
-    "        emb = outputs.last_hidden_state[:, 0, :]\n",
-    "    return emb.cpu().tolist()\n",
-    "\n",
-    "def detect_body_bbox_and_embedding(meta):\n",
-    "    im = Image.open(meta[\"image_path\"]).convert(\"RGB\")\n",
-    "    w, h = im.size\n",
-    "    face = meta[\"face_bbox\"][0]\n",
-    "    inp = processor(images=im, text=[[\"a person\"]], return_tensors=\"pt\").to(device)\n",
-    "    with torch.no_grad():\n",
-    "        out = g_model(**inp)\n",
-    "    r = processor.post_process_grounded_object_detection(out, inp.input_ids, 0.4, 0.3, [(h, w)])[0]\n",
-    "\n",
-    "    def overlap(a, b):\n",
-    "        xA, yA = max(a[0], b[0]), max(a[1], b[1])\n",
-    "        xB, yB = min(a[2], b[2]), min(a[3], b[3])\n",
-    "        inter = max(0, xB - xA) * max(0, yB - yA)\n",
-    "        A1 = (a[2] - a[0]) * (a[3] - a[1])\n",
-    "        A2 = (b[2] - b[0]) * (b[3] - b[1])\n",
-    "        return inter / (A1 + A2 - inter) if (A1 + A2 - inter) else 0\n",
-    "\n",
-    "    best_box, best_o = None, 0\n",
-    "    for box, sc, lab in zip(r[\"boxes\"], r[\"scores\"], r[\"labels\"]):\n",
-    "        box = box.tolist()\n",
-    "        o = overlap(face, box)\n",
-    "        if o > best_o:\n",
-    "            best_o = o\n",
-    "            best_box = box\n",
-    "\n",
-    "    if not best_box:\n",
-    "        return None\n",
-    "\n",
-    "    bx1, by1, bx2, by2 = map(int, best_box)\n",
-    "    cropped_body = im.crop((bx1, by1, bx2, by2))\n",
-    "    meta[\"body_bbox\"] = best_box\n",
-    "    meta[\"body_embedding\"] = compute_body_embedding(cropped_body)\n",
-    "    return meta\n",
-    "\n",
-    "\n",
-    "for i, cluster in enumerate(clusters):\n",
-    "    for idx in tqdm(cluster, desc=f\"Cluster {i}\"):\n",
-    "        result = detect_body_bbox_and_embedding(metadata[idx])\n",
-    "        if result is None:\n",
-    "            print(f'defective metadata[{idx}]')\n",
-    "            metadata[idx][\"defective\"] = True\n",
-    "        else:\n",
-    "            metadata[idx] = result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save to dataset ignoring the defect ones\n",
-    "import os, json\n",
-    "\n",
-    "def get_max_folder_number(directory):\n",
-    "    return max((int(d) for d in os.listdir(directory) if d.isdigit() and os.path.isdir(os.path.join(directory, d))), default=None)\n",
-    "\n",
-    "bundle = get_max_folder_number('./data/dataset')\n",
-    "\n",
-    "for i, cluster in enumerate(clusters):\n",
-    "    char = get_max_folder_number(f'./data/dataset/{bundle}')\n",
-    "    dir = f'./data/dataset/{bundle}/{char}'\n",
-    "    \n",
-    "    with open(f\"{dir}/data.json\", \"w\") as f: # save cluster metadata with indices correspondig to images\n",
-    "        json.dump(data, f, indent=4)\n",
-    "\n",
-    "    for idx in tqdm(cluster, desc=f\"Cluster {i}\"): # save images as avif\n",
-    "        if metadata[idx][\"defective\"] == True:\n",
-    "            print(metadata[idx][\"defective\"])\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.makedirs(\"./data/dataset/0\", exist_ok=True)"
+    "%cd dataset_creation\n",
+    "!python3 add_movie.py --movie_name \"matrix\"\n",
+    "%cd .."
    ]
   },
   {
