--- a/train.ipynb
+++ b/train.ipynb
@@ -40,13 +40,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install torrentp nest_asyncio\n",
-    "# !huggingface-cli download OpenGVLab/InternViT-300M-448px-V2_5\n",
-    "# !huggingface-cli download IDEA-Research/grounding-dino-tiny\n",
-    "\n",
-    "%cd dataset_creation\n",
-    "!python3 add_movie.py --movie_name \"matrix\"\n",
-    "%cd .."
+    "# !sudo -v ; curl https://rclone.org/install.sh | sudo bash\n",
+    "# !sudo apt-get update\n",
+    "# !apt-get update && apt-get install -y fuse3 -y"
    ]
   },
   {
@@ -55,55 +51,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot a cluster\n",
-    "import random, math\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
-    "import matplotlib.patches as patches\n",
-    "\n",
-    "def display_cluster_images(cluster, face_metadata, images_per_row=5, max_images=60):\n",
-    "    if len(cluster) > max_images:\n",
-    "        cluster = random.sample(cluster, max_images)\n",
-    "\n",
-    "    num_images = len(cluster)\n",
-    "    num_rows = math.ceil(num_images / images_per_row)\n",
-    "    fig, axes = plt.subplots(num_rows, images_per_row, figsize=(15, 3 * num_rows))\n",
-    "    axes = axes.flatten()\n",
-    "\n",
-    "    for ax, idx in zip(axes, cluster):\n",
-    "        img_path = face_metadata[idx][\"image_path\"]\n",
-    "        img = mpimg.imread(img_path)\n",
-    "        ax.imshow(img)\n",
-    "        ax.axis(\"off\")\n",
-    "\n",
-    "        # Draw face bbox if available\n",
-    "        if \"face_bbox\" in face_metadata[idx] and face_metadata[idx][\"face_bbox\"]:\n",
-    "            fb = face_metadata[idx][\"face_bbox\"][0]\n",
-    "            x1, y1, x2, y2 = map(int, fb)\n",
-    "            rect_face = patches.Rectangle(\n",
-    "                (x1, y1), x2 - x1, y2 - y1,\n",
-    "                linewidth=2, edgecolor=\"red\", facecolor=\"none\"\n",
-    "            )\n",
-    "            ax.add_patch(rect_face)\n",
-    "\n",
-    "        # Draw body bbox if available\n",
-    "        if \"body_bbox\" in face_metadata[idx] and face_metadata[idx][\"body_bbox\"]:\n",
-    "            bb = face_metadata[idx][\"body_bbox\"]\n",
-    "            x1, y1, x2, y2 = map(int, bb)\n",
-    "            rect_body = patches.Rectangle(\n",
-    "                (x1, y1), x2 - x1, y2 - y1,\n",
-    "                linewidth=2, edgecolor=\"blue\", facecolor=\"none\"\n",
-    "            )\n",
-    "            ax.add_patch(rect_body)\n",
-    "\n",
-    "    for ax in axes[num_images:]:\n",
-    "        ax.axis(\"off\")\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
+    "import json, subprocess, os, asyncio\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
     "\n",
     "\n",
-    "display_cluster_images(clusters[6], metadata)"
+    "def upload_to_drive():\n",
+    "    DATASET_DIR = \"dataset_creation/data/dataset\"\n",
+    "    REMOTE_BASE = \"drive:dataset\"\n",
+    "    bundles = [d for d in os.listdir(DATASET_DIR)\n",
+    "               if os.path.isdir(os.path.join(DATASET_DIR, d)) and d.isdigit()]\n",
+    "    for bundle in bundles:\n",
+    "        archive_name = f\"{bundle}.tar\"  # uncompressed archive\n",
+    "        subprocess.run([\"tar\", \"-cf\", archive_name, \"-C\", DATASET_DIR, bundle], check=True)\n",
+    "        subprocess.run([\n",
+    "            \"rclone\", \"copy\", archive_name, REMOTE_BASE,\n",
+    "            \"--transfers=32\", \"--checkers=32\", \"--fast-list\", \"--progress\"\n",
+    "        ], check=True)\n",
+    "        os.remove(archive_name)\n",
+    "        print(f\"Processed and uploaded bundle {bundle}\")\n",
+    "\n",
+    "\n",
+    "async def main():\n",
+    "    movies_path = \"./dataset_creation/movies.json\"\n",
+    "    processed_path = \"./dataset_creation/processed.json\"\n",
+    "    \n",
+    "    with open(movies_path, \"r\") as f:\n",
+    "        movies = json.load(f)\n",
+    "    if os.path.exists(processed_path):\n",
+    "        with open(processed_path, \"r\") as f:\n",
+    "            processed = json.load(f)\n",
+    "    else:\n",
+    "        processed = []\n",
+    "    \n",
+    "    upload_tasks = []\n",
+    "    \n",
+    "    while movies:\n",
+    "        movie = movies.pop(0)\n",
+    "        result = subprocess.run([\"python3\", \"add_movie.py\", \"--movie_name\", movie],\n",
+    "                                cwd=\"dataset_creation\")\n",
+    "        if result.returncode == 0:\n",
+    "            print(f\"Successfully processed {movie}\")\n",
+    "            processed.append(movie)\n",
+    "        else:\n",
+    "            print(f\"Processing error ({result.returncode}) for {movie}\")\n",
+    "        \n",
+    "        with open(movies_path, \"w\") as f:\n",
+    "            json.dump(movies, f, indent=4)\n",
+    "        with open(processed_path, \"w\") as f:\n",
+    "            json.dump(processed, f, indent=4)\n",
+    "        \n",
+    "        # Launch the upload function in the background asynchronously.\n",
+    "        # This runs upload_to_drive() in a separate thread.\n",
+    "        task = asyncio.create_task(asyncio.to_thread(upload_to_drive))\n",
+    "        upload_tasks.append(task)\n",
+    "        \n",
+    "        # Optionally yield control so upload can start concurrently.\n",
+    "        await asyncio.sleep(0)\n",
+    "    \n",
+    "    # Wait for all upload tasks to finish before exiting.\n",
+    "    await asyncio.gather(*upload_tasks)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    asyncio.run(main())"
    ]
   },
   {
