--- a/trash_bin.ipynb
+++ b/trash_bin.ipynb
@@ -86,6 +86,119 @@
     "print(f'took {delta} seconds')\n",
     "output[0].show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "341a2fd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#install decord\n",
+    "!sudo apt update\n",
+    "!sudo apt install libnvidia-decode-550-server -y\n",
+    "!sudo add-apt-repository ppa:jonathonf/ffmpeg-4 -y\n",
+    "!sudo apt-get update\n",
+    "!sudo apt-get install -y build-essential python3-dev python3-setuptools make cmake\n",
+    "!sudo apt-get install -y ffmpeg libavcodec-dev libavfilter-dev libavformat-dev libavutil-dev\n",
+    "!git clone --recursive https://github.com/dmlc/decord\n",
+    "%cd decord\n",
+    "!mkdir build\n",
+    "%cd build\n",
+    "!cmake .. -DUSE_CUDA=ON -DCMAKE_BUILD_TYPE=Release\n",
+    "!make\n",
+    "%cd ../python\n",
+    "!python3 setup.py install --user\n",
+    "%cd ../.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8fd8063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess, zipfile, json\n",
+    "import pandas as pd\n",
+    "\n",
+    "def download_tmdb_dataset():\n",
+    "    subprocess.run([\n",
+    "        \"kaggle\", \"datasets\", \"download\", \"-d\", \"asaniczka/tmdb-movies-dataset-2023-930k-movies\"\n",
+    "    ], check=True)\n",
+    "    zip_filename = \"tmdb-movies-dataset-2023-930k-movies.zip\"\n",
+    "    with zipfile.ZipFile(zip_filename, \"r\") as z:\n",
+    "        z.extractall(\".\")\n",
+    "    \n",
+    "    print(\"Dataset downloaded and extracted.\")\n",
+    "\n",
+    "download_tmdb_dataset()\n",
+    "\n",
+    "df = pd.read_csv(\"TMDB_movie_dataset_v11.csv\")\n",
+    "df_sorted = df.sort_values(by=\"vote_count\", ascending=False)\n",
+    "titles = df_sorted.head(3000)['title'].to_numpy().tolist()\n",
+    "\n",
+    "with open(\"./dataset_creation/movies.json\", \"w\") as f:\n",
+    "    json.dump(titles, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff39e15b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot a cluster\n",
+    "import random, math\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "import matplotlib.patches as patches\n",
+    "\n",
+    "def display_cluster_images(cluster, face_metadata, images_per_row=5, max_images=60):\n",
+    "    if len(cluster) > max_images:\n",
+    "        cluster = random.sample(cluster, max_images)\n",
+    "\n",
+    "    num_images = len(cluster)\n",
+    "    num_rows = math.ceil(num_images / images_per_row)\n",
+    "    fig, axes = plt.subplots(num_rows, images_per_row, figsize=(15, 3 * num_rows))\n",
+    "    axes = axes.flatten()\n",
+    "\n",
+    "    for ax, idx in zip(axes, cluster):\n",
+    "        img_path = face_metadata[idx][\"image_path\"]\n",
+    "        img = mpimg.imread(img_path)\n",
+    "        ax.imshow(img)\n",
+    "        ax.axis(\"off\")\n",
+    "\n",
+    "        # Draw face bbox if available\n",
+    "        if \"face_bbox\" in face_metadata[idx] and face_metadata[idx][\"face_bbox\"]:\n",
+    "            fb = face_metadata[idx][\"face_bbox\"][0]\n",
+    "            x1, y1, x2, y2 = map(int, fb)\n",
+    "            rect_face = patches.Rectangle(\n",
+    "                (x1, y1), x2 - x1, y2 - y1,\n",
+    "                linewidth=2, edgecolor=\"red\", facecolor=\"none\"\n",
+    "            )\n",
+    "            ax.add_patch(rect_face)\n",
+    "\n",
+    "        # Draw body bbox if available\n",
+    "        if \"body_bbox\" in face_metadata[idx] and face_metadata[idx][\"body_bbox\"]:\n",
+    "            bb = face_metadata[idx][\"body_bbox\"]\n",
+    "            x1, y1, x2, y2 = map(int, bb)\n",
+    "            rect_body = patches.Rectangle(\n",
+    "                (x1, y1), x2 - x1, y2 - y1,\n",
+    "                linewidth=2, edgecolor=\"blue\", facecolor=\"none\"\n",
+    "            )\n",
+    "            ax.add_patch(rect_body)\n",
+    "\n",
+    "    for ax in axes[num_images:]:\n",
+    "        ax.axis(\"off\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "display_cluster_images(clusters[6], metadata)"
+   ]
   }
  ],
  "metadata": {
