--- a/train.ipynb
+++ b/train.ipynb
@@ -42,7 +42,18 @@
    "source": [
     "# !sudo -v ; curl https://rclone.org/install.sh | sudo bash\n",
     "# !sudo apt-get update\n",
-    "# !apt-get update && apt-get install -y fuse3 -y"
+    "# !apt-get update && apt-get install -y fuse3 -y\n",
+    "\n",
+    "%cd dataset_creation\n",
+    "!python3 gather.py\n",
+    "%cd ..\n",
+    "\n",
+    "# sudo apt update && sudo apt install screen -y\n",
+    "# cd /workspace/dtback/dataset_creation\n",
+    "# screen -S gather\n",
+    "# python3 gather.py\n",
+    "# # ctrl+a d\n",
+    "# screen -r gather"
    ]
   },
   {
@@ -57,7 +68,7 @@
     "\n",
     "\n",
     "def upload_to_drive():\n",
-    "    DATASET_DIR = \"dataset_creation/data/dataset\"\n",
+    "    DATASET_DIR = \"data/dataset\"\n",
     "    REMOTE_BASE = \"drive:dataset\"\n",
     "    bundles = [d for d in os.listdir(DATASET_DIR)\n",
     "               if os.path.isdir(os.path.join(DATASET_DIR, d)) and d.isdigit()]\n",
@@ -73,8 +84,8 @@
     "\n",
     "\n",
     "async def main():\n",
-    "    movies_path = \"./dataset_creation/movies.json\"\n",
-    "    processed_path = \"./dataset_creation/processed.json\"\n",
+    "    movies_path = \"./movies.json\"\n",
+    "    processed_path = \"./processed.json\"\n",
     "    \n",
     "    with open(movies_path, \"r\") as f:\n",
     "        movies = json.load(f)\n",
@@ -88,8 +99,7 @@
     "    \n",
     "    while movies:\n",
     "        movie = movies.pop(0)\n",
-    "        result = subprocess.run([\"python3\", \"add_movie.py\", \"--movie_name\", movie],\n",
-    "                                cwd=\"dataset_creation\")\n",
+    "        result = subprocess.run([\"python3\", \"add_movie.py\", \"--movie_name\", movie])\n",
     "        if result.returncode == 0:\n",
     "            print(f\"Successfully processed {movie}\")\n",
     "            processed.append(movie)\n",
