--- a/train.ipynb
+++ b/train.ipynb
@@ -6,15 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "HOME = os.getcwd()\n",
-    "print(HOME)\n",
-    "\n",
     "!export MAKEFLAGS=\"-j$(nproc)\"\n",
     "!pip install diffusers transformers accelerate xformers huggingface_hub[hf_transfer] hf_transfer \\\n",
     "    pillow insightface opencv-python apex gradio onnxruntime-gpu timm pickleshare \\\n",
-    "    SentencePiece ftfy einops facexlib fire onnx onnxruntime-gpu\n",
-    "!pip show basicsr || pip install git+https://github.com/XPixelGroup/BasicSR\n",
+    "    SentencePiece ftfy einops facexlib fire onnx\n",
+    "!pip install git+https://github.com/XPixelGroup/BasicSR\n",
     "!pip install flash-attn"
    ]
   },
@@ -32,6 +28,30 @@
     "%env HUGGINGFACEHUB_API_TOKEN={k}\n",
     "%env HF_TOKEN={k}\n",
     "%env HF_HUB_ENABLE_HF_TRANSFER=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!export MAKEFLAGS=\"-j$(nproc)\"\n",
+    "!pip install transformers huggingface_hub[hf_transfer] hf_transfer pillow torch decord\n",
+    "!pip install lmdeploy timm\n",
+    "!pip install flash-attn\n",
+    "!huggingface-cli download OpenGVLab/InternVL2_5-26B-MPO-AWQ # for dataset labeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd dataset_creation\n",
+    "!python3 label.py\n",
+    "%cd .."
    ]
   },
   {
@@ -65,7 +85,7 @@
     "!huggingface-cli download black-forest-labs/FLUX.1-dev\n",
     "!huggingface-cli download OpenGVLab/InternViT-300M-448px-V2_5\n",
     "!huggingface-cli download IDEA-Research/grounding-dino-tiny\n",
-    "# !huggingface-cli download OpenGVLab/InternVL2_5-26B-MPO-AWQ # for dataset creation"
+    "# !huggingface-cli download OpenGVLab/InternVL2_5-26B-MPO-AWQ # for dataset labeling"
    ]
   }
  ],
