--- a/train.ipynb
+++ b/train.ipynb
@@ -9,7 +9,7 @@
     "!export MAKEFLAGS=\"-j$(nproc)\"\n",
     "!pip install diffusers transformers accelerate xformers huggingface_hub[hf_transfer] hf_transfer \\\n",
     "    pillow insightface opencv-python apex gradio onnxruntime-gpu timm pickleshare \\\n",
-    "    SentencePiece ftfy einops facexlib fire onnx\n",
+    "    SentencePiece ftfy einops facexlib fire onnx bencodepy torrentp\n",
     "!pip install git+https://github.com/XPixelGroup/BasicSR\n",
     "!pip install flash-attn"
    ]
@@ -55,25 +55,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# !sudo -v ; curl https://rclone.org/install.sh | sudo bash\n",
-    "# !sudo apt-get update\n",
-    "# !apt-get update && apt-get install -y fuse3 -y\n",
+    "```bash\n",
+    "sudo -v ; curl https://rclone.org/install.sh | sudo bash\n",
+    "sudo apt-get update\n",
+    "apt-get update && apt-get install -y fuse3 -y\n",
+    "```\n",
     "\n",
-    "%cd dataset_creation\n",
-    "!python3 gather.py\n",
-    "%cd ..\n",
+    "```bash\n",
+    "cd /workspace/dtback/dataset_creation/data/dataset\n",
+    "rclone sync drive:dataset . --progress\n",
+    "for tar in *.tar; do\n",
+    "    echo \"Extracting $tar...\"\n",
+    "    tar -xf \"$tar\" && rm \"$tar\"\n",
+    "done\n",
+    "```\n",
     "\n",
-    "# sudo apt update && sudo apt install screen -y\n",
-    "# cd /workspace/dtback/dataset_creation\n",
-    "# screen -S gather\n",
-    "# python3 gather.py\n",
-    "# # ctrl+a d\n",
-    "# screen -r gather"
+    "```bash\n",
+    "sudo apt update && sudo apt install screen -y\n",
+    "cd /workspace/dtback/dataset_creation\n",
+    "screen -S gather\n",
+    "python3 gather.py > gather.log 2>&1\n",
+    "python3 label.py > label.log 2>&1\n",
+    "# ctrl+a d\n",
+    "screen -r gather\n",
+    "```"
    ]
   },
   {
