--- a/trash_bin.ipynb
+++ b/trash_bin.ipynb
@@ -656,6 +656,62 @@
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a93cae4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd dataset_creation\n",
+    "\n",
+    "import os, asyncio, base64, shutil, random, string, logging, sys, requests, glob, cv2, re\n",
+    "import insightface, torch, pickle, time, bencodepy, hashlib,  json, subprocess, multiprocessing\n",
+    "import os\n",
+    "import asyncio\n",
+    "import subprocess\n",
+    "import json\n",
+    "import nest_asyncio\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "def get_video_duration(v):\n",
+    "    cmd = [\"ffprobe\", \"-v\", \"quiet\", \"-print_format\", \"json\", \"-show_format\", \"-show_streams\", v]\n",
+    "    out = subprocess.check_output(cmd, stderr=subprocess.STDOUT)\n",
+    "    return float(json.loads(out)['format']['duration'])\n",
+    "\n",
+    "async def extract_segment(name, v, s, d, idx):\n",
+    "    od = f\"./data/raw_frames/{name}/segment_{idx}\"\n",
+    "    os.makedirs(od, exist_ok=True)\n",
+    "    cmd = [\"ffmpeg\", \"-hide_banner\", \"-hwaccel\", \"cuda\", \"-c:v\", \"h264_cuvid\", \"-ss\", str(s), \"-t\", str(d),\n",
+    "           \"-i\", v, \"-vf\", \"fps=0.5\", \"-q:v\", \"2\", \"-vsync\", \"0\", \"-threads\", \"0\", f\"{od}/frame_%04d.jpg\"]\n",
+    "    proc = await asyncio.create_subprocess_exec(*cmd)\n",
+    "    await proc.wait()\n",
+    "\n",
+    "def merge_frames(name, parts):\n",
+    "    bd = f\"./data/raw_frames/{name}\"\n",
+    "    cnt = 1\n",
+    "    for i in range(1, parts + 1):\n",
+    "        seg = os.path.join(bd, f\"segment_{i}\")\n",
+    "        for f in sorted(glob.glob(os.path.join(seg, '*.jpg'))):\n",
+    "            shutil.move(f, os.path.join(bd, f\"frame_{cnt:04d}.jpg\"))\n",
+    "            cnt += 1\n",
+    "        os.rmdir(seg)\n",
+    "\n",
+    "async def extract_frames(name, v, parts=8):\n",
+    "    bd = f\"./data/raw_frames/{name}\"\n",
+    "    os.makedirs(bd, exist_ok=True)\n",
+    "    total = get_video_duration(v)\n",
+    "    d = total / parts\n",
+    "    tasks = [asyncio.create_task(extract_segment(name, v, i * d, d, i + 1)) for i in range(parts)]\n",
+    "    await asyncio.gather(*tasks)\n",
+    "    merge_frames(name, parts)\n",
+    "\n",
+    "asyncio.run(extract_frames(\"DBqi0K75\", \"./data/vids/DBqi0K75.mp4\", parts=8))\n",
+    "\n",
+    "%cd .."
+   ]
   }
  ],
  "metadata": {
