--- a/train.ipynb
+++ b/train.ipynb
@@ -63,8 +63,9 @@
     "sudo apt-get update\n",
     "apt-get update && apt-get install -y fuse3 -y\n",
     "```\n",
-    "\n",
+    "-- write rclone.conf --\n",
     "```bash\n",
+    "mkdir -p /workspace/dtback/dataset_creation/data/dataset\n",
     "cd /workspace/dtback/dataset_creation/data/dataset\n",
     "rclone sync drive:dataset . --progress\n",
     "for tar in *.tar; do\n",
