--- a/train.ipynb
+++ b/train.ipynb
@@ -9,8 +9,9 @@
     "!export MAKEFLAGS=\"-j$(nproc)\"\n",
     "!pip install diffusers transformers accelerate xformers huggingface_hub[hf_transfer] hf_transfer \\\n",
     "    pillow insightface opencv-python apex gradio onnxruntime-gpu timm pickleshare \\\n",
-    "    SentencePiece ftfy einops facexlib fire onnx bencodepy torrentp\n",
+    "    SentencePiece ftfy einops facexlib fire onnx bencodepy torrentp ninja\n",
     "!pip install git+https://github.com/XPixelGroup/BasicSR\n",
+    "!pip install -U git+https://github.com/qubvel/transformers@fix-custom-kernels\n",
     "!pip install flash-attn"
    ]
   },
