--- a/train.ipynb
+++ b/train.ipynb
@@ -37,6 +37,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from lmdeploy.vl import load_image\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!export MAKEFLAGS=\"-j$(nproc)\"\n",
     "!pip install transformers huggingface_hub[hf_transfer] hf_transfer pillow torch decord\n",
     "!pip install lmdeploy timm\n",
@@ -68,7 +77,7 @@
     "```bash\n",
     "mkdir -p /workspace/dtback/dataset_creation/data/dataset\n",
     "cd /workspace/dtback/dataset_creation/data/dataset\n",
-    "rclone sync drive:dataset . --progress\n",
+    "rclone sync drive:dataset/stage_0 . --progress # syncying stage 0\n",
     "for tar in *.tar; do\n",
     "    echo \"Extracting $tar...\"\n",
     "    tar -xf \"$tar\" && rm \"$tar\"\n",
