--- a/train.ipynb
+++ b/train.ipynb
@@ -37,7 +37,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lmdeploy.vl import load_image\n"
+    "!pip install lmdeploy timm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lmdeploy.vl import load_image\n",
+    "\n",
+    "load_image('/workspace/dtback/dataset_creation/data/dataset/0/0')\n"
    ]
   },
   {
