--- a/train.ipynb
+++ b/train.ipynb
@@ -117,6 +117,52 @@
     "!huggingface-cli download IDEA-Research/grounding-dino-tiny\n",
     "# !huggingface-cli download OpenGVLab/InternVL2_5-26B-MPO-AWQ # for dataset labeling"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# upload everything\n",
+    "\n",
+    "import os, asyncio, base64, shutil, random, string, logging, sys, requests, glob, cv2, re\n",
+    "import insightface, torch, pickle, time, bencodepy, hashlib,  json, subprocess, multiprocessing\n",
+    "\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "async def upload_bundle(bundle, local, remote):\n",
+    "    archive = f\"{bundle}.tar\"\n",
+    "    proc = await asyncio.create_subprocess_exec(\n",
+    "        \"tar\", \"-cf\", archive, \"-C\", local, bundle,\n",
+    "        stdout=asyncio.subprocess.PIPE, stderr=asyncio.subprocess.PIPE\n",
+    "    )\n",
+    "    await proc.communicate()\n",
+    "    proc = await asyncio.create_subprocess_exec(\n",
+    "        \"rclone\", \"copy\", archive, remote,\n",
+    "        \"--checksum\", \"--transfers=64\", \"--checkers=64\",\n",
+    "        \"--fast-list\", \"--multi-thread-streams=4\", \"--progress\",\n",
+    "        stdout=asyncio.subprocess.PIPE, stderr=asyncio.subprocess.PIPE\n",
+    "    )\n",
+    "    await proc.communicate()\n",
+    "    os.remove(archive)\n",
+    "    logging.info(f\"Processed and uploaded bundle {bundle}\")\n",
+    "\n",
+    "\n",
+    "async def upload_to_drive(stage=0):\n",
+    "    local = \"data/dataset\"\n",
+    "    remote = f\"drive:dataset/stage_{stage}\"\n",
+    "    bundles = [d for d in os.listdir(local) if os.path.isdir(os.path.join(local, d)) and d.isdigit()]\n",
+    "    if bundles:\n",
+    "        await asyncio.gather(*(upload_bundle(bundle, local, remote) for bundle in bundles))\n",
+    "\n",
+    "\n",
+    "async def sync_loop():\n",
+    "    while True:\n",
+    "        await upload_to_drive(0)\n",
+    "        await asyncio.sleep(12*60)"
+   ]
   }
  ],
  "metadata": {
