--- a/train.ipynb
+++ b/train.ipynb
@@ -88,11 +88,9 @@
     "```bash\n",
     "mkdir -p /workspace/dtback/dataset_creation/data/dataset\n",
     "cd /workspace/dtback/dataset_creation/data/dataset\n",
-    "rclone sync drive:dataset/stage_0 . --progress # syncying stage 0\n",
-    "for tar in *.tar; do\n",
-    "    echo \"Extracting $tar...\"\n",
-    "    tar -xf \"$tar\" && rm \"$tar\"\n",
-    "done\n",
+    "rclone sync drive:dataset/stage_0 . --progress # syncing stage 0\n",
+    "\n",
+    "parallel -j 4 'echo \"Extracting {}...\"; tar -xf {} && rm {}' ::: *.tar\n",
     "```\n",
     "\n",
     "```bash\n",
