--- a/main.ipynb
+++ b/main.ipynb
@@ -452,6 +452,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a2877ef5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# flux plain\n",
+    "import torch\n",
+    "from diffusers import FluxPipeline\n",
+    "\n",
+    "if \"pipe\" not in globals():\n",
+    "    pipe = FluxPipeline.from_pretrained(\"black-forest-labs/FLUX.1-dev\", device_map=\"balanced\", torch_dtype=torch.bfloat16)\n",
+    "prompt = \"photo of a cat\"\n",
+    "img = pipe(prompt=prompt, guidance_scale=2, height=1024, width=1024, num_inference_steps=40,\n",
+    "           generator=torch.Generator(\"cuda\").manual_seed(10)).images[0]\n",
+    "img.show()\n",
+    "img.save('prebase.webp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4d739688-c609-456c-b980-482d3385a2fe",
    "metadata": {},
    "outputs": [],
