--- a/train.ipynb
+++ b/train.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,8 +111,8 @@
    "outputs": [],
    "source": [
     "!huggingface-cli download black-forest-labs/FLUX.1-dev\n",
-    "!huggingface-cli download OpenGVLab/InternViT-300M-448px-V2_5\n",
-    "!huggingface-cli download IDEA-Research/grounding-dino-tiny\n",
+    "# !huggingface-cli download OpenGVLab/InternViT-300M-448px-V2_5\n",
+    "# !huggingface-cli download IDEA-Research/grounding-dino-tiny\n",
     "# !huggingface-cli download OpenGVLab/InternVL2_5-26B-MPO-AWQ # for dataset labeling"
    ]
   },
