--- a/main.ipynb
+++ b/main.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fab83e6f",
    "metadata": {
     "jupyter": {
@@ -466,7 +466,7 @@
     "img = pipe(prompt=prompt, guidance_scale=2, height=1024, width=1024, num_inference_steps=20,\n",
     "           generator=torch.Generator(\"cuda\").manual_seed(10)).images[0]\n",
     "img.show()\n",
-    "img.save('prebase.webp')"
+    "# img.save('prebase.webp')"
    ]
   },
   {
